# ocrp

./: .gitignore  .pre-commit-config.yaml  ASR_ISSUES_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  SCRIPTS_README.md  config_manager.py  diagnose.bat  diagnose.sh  eorcptemp_diff.txt  ocr_gui.py  orcp_gui.bat  orcp_gui.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_cpu.bat  setup_gpu.bat  setup_pip.bat  style_loader.py  temp_diff.txt
.github/workflows/: ci.yml
config/: ai_correction.json  api_presets.json  asr_engines.json  filters.json  ocr_engines.json  prompt_templates.json  settings.json  ui_config.json
core/: __init__.py  ai_correction.py  api_preset_manager.py  asr_engine.py  asr_server.py  config_manager.py  config_schema.py  config_schemas.py  ffmpeg_player.py  ffmpeg_reader.py  filter_manager.py  frame_processor.py  i18n.py  logger.py  ocr_engine.py  ocr_server.py  prompt_manager.py  result_processor.py  subprocess_utils.py  utils.py  workflow_manager.py
core/llm_utils/: __init__.py  llm_client.py  retry.py
docs/: CONTRIBUTING.md  README_EN.md  README_JA.md  RELEASE_beta1.0.md
locale/: orcp.pot
locale/en_US/LC_MESSAGES/: orcp.po
locale/ja_JP/LC_MESSAGES/: orcp.po
locale/zh_CN/LC_MESSAGES/: orcp.po
models/asr/: README.md
models/asr/models--Systran--faster-whisper-large-v3/faster-whisper-large-v3/: README.md
scripts/: check_dll_regressions.py  download_gpu.py  img tools.py  main.py  run_ocr.py  setup_gpu_pkgs.py  test_ocr_asr.py  test_seg_prompt.py
styles/: dark_style.qss  light_style.qss
tests/: __init__.py  conftest.py  test_ai_correction_regex.py  test_config_manager.py  test_config_schema.py  test_filter_manager.py  test_gpu_environment.py  test_i18n.py  test_llm_live.py  test_llm_mock.py  test_logger.py  test_prompt_manager.py  test_result_export.py  test_result_processor.py  test_utils.py
ui/: __init__.py  collapsible_group.py  config_panel.py  dialogs.py  display_dialog.py  main_window.py  region_manager.py  result_table.py  settings_dialog.py  style_loader.py  template_editor.py  video_preview.py  widget_helpers.py  workers.py
