[project]
name = "orcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.12.1",
    "astor==0.8.1",
    "attrdict==2.0.1",
    "babel==2.18.0",
    "bce-python-sdk==0.9.60",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "cachetools==7.0.1",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cssselect==1.4.0",
    "cssutils==2.11.1",
    "cycler==0.12.1",
    "Cython==3.2.4",
    "decorator==5.2.1",
    "et_xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "fire==0.7.1",
    "Flask==3.1.3",
    "flask-babel==4.0.0",
    "fonttools==4.61.1",
    "future==1.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "ImageIO==2.37.2",
    "imgaug==0.4.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "lazy_loader==0.4",
    "lmdb==1.7.5",
    "lxml==6.0.2",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.8",
    "more-itertools==10.8.0",
    "networkx==3.4.2",
    "numpy>=1.26.4,<3",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python-headless>=4.9.0",
    "openpyxl==3.1.5",
    "opt-einsum==3.3.0",
    "packaging==26.0",
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
    "pandas==2.3.3",
    "pdf2docx==0.5.8",
    "pillow==12.1.1",
    "premailer==3.10.0",
    "protobuf==3.20.2",
    "psutil==7.2.2",
    "pyclipper==1.4.0",
    "pycryptodome==3.23.0",
    "PyMuPDF>=1.23.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "pytz==2025.2",
    "RapidFuzz==3.14.3",
    "rarfile==4.2",
    "requests>=2.32.5",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "setuptools<70",
    "shapely==2.1.2",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "termcolor==3.3.0",
    "tifffile==2025.5.10",
    "tqdm==4.67.3",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "visualdl==2.5.3",
    "Werkzeug==3.1.6",
    "PyQt5>=5.15",
    "whisperx>=3.3.1",
    "uncompyle6>=3.9.3",
    "torchaudio<2.11",
    "torch<2.11",
    # -- CUDA DLL 由 torch (cu124) 自带，无需 nvidia pip 包 --
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux'",
]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
include = ["core*", "ui*", "config*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
