[project]
name = "orcp"
version = "0.2.0"
description = "跨平台视频/图片 OCR 字幕提取工具，支持多引擎 OCR、语音识别、AI 纠错"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "yimoyimoyi" },
]
keywords = ["ocr", "subtitle", "video", "paddleocr", "whisper", "asr", "ai-correction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# ── 核心依赖（仅直接依赖，传递依赖由包管理器解析） ──
dependencies = [
    # GUI 框架
    "PyQt5>=5.15",
    # OCR 引擎
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
    # 图像处理
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.4,<3",
    "pillow>=10.0",
    # HTTP / API 调用
    "requests>=2.32",
    "httpx>=0.27",
    # 数据处理
    "pandas>=2.0",
    "RapidFuzz>=3.0",
    # 音频 / ASR
    "whisperx>=3.3.1",
    "torchaudio<2.11",
    "torch<2.11",
    # 系统工具
    "psutil>=5.9",
    "tqdm>=4.60",
    "setuptools<70",
    "typing_extensions>=4.8",
]

[project.optional-dependencies]
# ── GPU 支持（CUDA 12.4） ──
gpu = [
    # paddlepaddle-gpu 通过 paddle 官方源安装，不在此声明
]
# ── 开发 / 质量工具 ──
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pre-commit>=3.7",
]
# ── 文档 ──
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/yimoyimoyi/orcp"
Repository = "https://github.com/yimoyimoyi/orcp"
Issues = "https://github.com/yimoyimoyi/orcp/issues"
Changelog = "https://github.com/yimoyimoyi/orcp/blob/main/CHANGELOG.md"

[project.scripts]
orcp = "ocr_gui:main"

# ═══════════════════════════════════════════════════════════════════
# 构建系统
# ═══════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "config*"]

# ═══════════════════════════════════════════════════════════════════
# uv 包管理器
# ═══════════════════════════════════════════════════════════════════

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux'",
]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux'",
]

# ═══════════════════════════════════════════════════════════════════
# Ruff 代码质量
# ═══════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # 行长度（由 formatter 处理）
    "E741",   # 变量名 l/O（UI 代码常见）
    "SIM108", # 三元表达式（可读性优先）
    "N802",   # 函数名大小写（Qt 约定 mixedCase）
    "N803",   # 参数名大小写
    "N806",   # 局部变量大小写
    "UP007",  # X | Y 联合类型（保持 Optional 兼容）
]

[tool.ruff.lint.isort]
known-first-party = ["core", "ui", "config_manager", "style_loader"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ═══════════════════════════════════════════════════════════════════
# Mypy 类型检查
# ═══════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true      # PyQt5/PaddleOCR 等无类型存根
check_untyped_defs = false         # 渐进式：先不检查无注释函数
disable_error_code = ["assignment", "arg-type", "return-value"]

# ═══════════════════════════════════════════════════════════════════
# Pytest
# ═══════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]
