[project]
name = "orcp"
version = "0.2.0"
description = "跨平台视频/图片 OCR 字幕提取工具，支持多引擎 OCR、语音识别、AI 纠错"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "yimoyimoyi" },
]
keywords = ["ocr", "subtitle", "video", "paddleocr", "whisper", "asr", "ai-correction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# ── 核心依赖（仅直接依赖，传递依赖由包管理器解析） ──
dependencies = [
    # GUI 框架
    "PyQt5>=5.15",
    # OCR 引擎
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
    # 图像处理
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.4,<3",
    "pillow>=10.0",
    # HTTP / API 调用
    "requests>=2.32",
    "httpx>=0.27",
    "openai>=1.0",
    "json-repair>=0.30.0",
    # 数据处理
    "pandas>=2.0",
    "RapidFuzz>=3.0",
    # 音频 / ASR
    "whisperx>=3.3.1",
    "torchaudio>=2.0,<2.11",
    "torch>=2.0,<2.11",
    # 系统工具
    "psutil>=5.9",
    "tqdm>=4.60",
    "setuptools<70",
    "typing_extensions>=4.8",
]

[project.optional-dependencies]
# ── GPU 支持（CUDA 12.4） ──
gpu = [
    # paddlepaddle-gpu 通过 paddle 官方源安装，不在此声明
]
# ── 开发 / 质量工具 ──
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pre-commit>=3.7",
]
# ── CI 最小环境（lint + test，不含 ML 库）──
ci = [
    "PyQt5>=5.15",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.4,<3",
    "pillow>=10.0",
    "requests>=2.32",
    "RapidFuzz>=3.0",
    "typing_extensions>=4.8",
]
# ── 文档 ──
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/yimoyimoyi/orcp"
Repository = "https://github.com/yimoyimoyi/orcp"
Issues = "https://github.com/yimoyimoyi/orcp/issues"
Changelog = "https://github.com/yimoyimoyi/orcp/blob/main/CHANGELOG.md"

[project.scripts]
orcp = "ocr_gui:main"

# ═══════════════════════════════════════════════════════════════════
# 构建系统
# ═══════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "config*"]

# ═══════════════════════════════════════════════════════════════════
# uv 包管理器
# ═══════════════════════════════════════════════════════════════════

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux'",
]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux'",
]

# ── GPU 用户：CUDA 索引源（纯 pip 包 DLL，无系统 CUDA Toolkit 依赖）──
# torch (cu126) 自带全套 CUDA 12.6 DLL，paddlepaddle-gpu 从 nvidia pip 包获取 DLL
# 取消注释以下行 + setup.bat --gpu 启用 GPU 索引：
# sources = [
#     { name = "pytorch-cu126", url = "https://download.pytorch.org/whl/cu126", explicit = true },
#     { name = "paddle-cu126", url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/", explicit = true },
# ]

# ═══════════════════════════════════════════════════════════════════
# Ruff 代码质量
# ═══════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
exclude = ["scripts/", "ocr_gui.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # 行长度（由 formatter 处理）
    "E701",   # 单行多语句（UI 代码紧凑布局）
    "E702",   # 分号分隔多语句（Qt 控件初始化常见）
    "E741",   # 变量名 l/O（UI 代码常见）
    "SIM102", # 嵌套 if 合并（可读性优先）
    "SIM105", # contextlib.suppress vs try-except-pass（风格偏好）
    "SIM108", # 三元表达式（可读性优先）
    "N802",   # 函数名大小写（Qt 约定 mixedCase）
    "N803",   # 参数名大小写
    "N806",   # 局部变量大小写
    "UP007",  # X | Y 联合类型（保持 Optional 兼容）
    "RUF001", # 全角字符在字符串中（中文项目需保留）
    "RUF002", # 全角字符在文档字符串中
    "RUF003", # 全角字符在注释中
    "B023",   # 闭包捕获循环变量（立即调用模式，无实际风险）
    "E402",   # 模块级 import 不在顶部（路径/DLL 初始化须先于 import）
    "W293",   # 行尾空白（formatter 自动处理）
    "RUF012", # 可变默认值用于类属性（Qt 信号定义惯用写法）
    "RUF059", # 未使用的解构变量（模式匹配惯用写法）
    "TC001",  # typing-only import 包装（不影响运行时）
    "TC003",  # 同上
    "B007",   # 未使用的循环变量（`for _x, _y, z in ...` 惯用写法）
    "RUF013", # 隐式 Optional（typing.Optional 显式写法，风格偏好）
    "B027",   # 空方法在抽象基类中（warm_up 为可选优化，非必需接口）
]

[tool.ruff.lint.isort]
known-first-party = ["core", "ui", "config_manager", "style_loader"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ═══════════════════════════════════════════════════════════════════
# Mypy 类型检查
# ═══════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true      # PyQt5/PaddleOCR 等无类型存根
check_untyped_defs = false         # 渐进式：先不检查无注释函数
disable_error_code = ["assignment", "arg-type", "return-value"]

# ═══════════════════════════════════════════════════════════════════
# Pytest
# ═══════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]
